fix(web): prevent page layout jumps while the supplement resizes

--- a/evanescence_web/res/styles.css
+++ b/evanescence_web/res/styles.css
@@ -644,6 +644,7 @@ main {
 #supplemental {
   padding: 10px;
   flex: 1 0 350px;
+  overflow: hidden;
 }
 
 #supplemental-panel .window-container {
